Fixed mobile first layout with rows using flex-wrap

--- a/css/main.css
+++ b/css/main.css
@@ -51,27 +51,26 @@ p {
   padding: 0 1.875em;
 }
 
-/*The widths are in a percentage!*/
 header {
-	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 header h1 {
-	margin: 0;
-	padding: 38px 0;
 	width: 100%;
+	text-align: center;
+	border-bottom: 3px solid #77a466;
+	padding: 1em 0 0.5em;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
+	width: 100%;
+	padding: 0.75em 0;
 }
 header nav ul {
 	margin: 0;
@@ -80,8 +79,8 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 14px;
-	padding: 0 10px;
+	font-size: 0.875em;
+	padding-bottom: 1.5em;
 	display: flex;
 	justify-content: center;
 }
@@ -90,58 +89,42 @@ header nav ul li a{
 	color:#77a466;
 }
 
-/*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
-	clear: both;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
-	align-items: flex-start;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
-.main-image {
-	height: auto;
-}
 .main-image img {
 	width: 100%;
+	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-}
 .main-title h3 {
 	text-align: left;
-	padding: 5px 0;
+	padding: 0.3125em 0;
 	color: #77a466;
 }
 .main-title p {
 	padding: 0;
-	font-size: 16px;
-	line-height: 25px;
+	font-size: 1em;
+	line-height: 1.75em;
 }
 
 .section-one,
 .section-two,
 .section-three {
-	height: auto;
 	border-top: 1px solid #eee;
+	width: 100%;
 }
 
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
+.section-one h4,
 .section-two h4,
 .section-three h4 {
-	padding: 10px 30px;
+	padding: 0.625em 0;
 }
 
 .menu {
@@ -149,35 +132,35 @@ header nav ul li a{
 	padding: 0;
 }
 .menu li {
-	padding: 10px 0;
+	padding: 0.625em 0;
 	color:#77a466;
 }
 
 .reviews {
 	color: #333;
-	font-size: 16px;
-	line-height: 21px;
+	font-size: 1em;
+	line-height: 1.3125em;
+	padding: 0;
 }
 
 .address {
-	font-size: 16px;
-	line-height: 24px;
+	font-size: 1em;
+	line-height: 1.5em;
+	padding: 0;
 }
 
 /*The widths are in a percentage!*/
 footer {
-	height: 50px;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
-	clear: both;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
 }
 footer span {
 	font-family: 'Wisdom Script', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 14px;
+	font-size: 0.875em;
 }
